sacamos carpeta cart

--- a/pages/guantes.html
+++ b/pages/guantes.html
@@ -10,11 +10,11 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
     <header>
-      <img src="/imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <img src="../imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
       <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,20 +33,20 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#"
-              >Musculosas <span class="sr-only">(Actual)</span></a
+              >Guantes <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="/index.html">Home</a>
-            <a class="nav-item nav-link" href="../contacto.html">Contacto</a>
-            <a class="nav-item nav-link" href="../quienes-somos.html"
+            <a class="nav-item nav-link" href="../index.html">Home</a>
+            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="./quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="../ubicacion.html">Ubicación</a>
+            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
             <!-- dropdown -->
             <!-- <div class="nav-item dropdown"> -->
             <div class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="../productos.html"
+                href="./productos.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -55,20 +55,20 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../productos.html"
-                    >Productos</a
-                  >
+                  <a class="dropdown-item" href="./productos.html">Productos</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./remeras.html">Remeras</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./guantes.html">Guantes</a>
+                  <a class="nav-item nav-link active" href="#"
+                    >Guantes <span class="sr-only"></span
+                  ></a>
                 </li>
                 <li>
-                  <a class="nav-item nav-link active" href="#"
-                    >Musculosas <span class="sr-only"></span
-                  ></a>
+                  <a class="dropdown-item" href="./musculosas.html"
+                    >Musculosas</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="./vendas.html">Vendas</a>
@@ -95,34 +95,28 @@
     <section>
       <div class="boxes">
         <div class="box">
-          <p>Musculosa Blanca</p>
+          <p>Guantes BloodMoon</p>
           <img
-            src="/imagenes/productos/musculosas/musculosa-white.jpg"
+            src="../imagenes/productos/guantes/guantes-bloodmoon.png"
             alt=""
           />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
-          <p>Musculosa Negra</p>
-          <img
-            src="/imagenes/productos/musculosas/musculosa-black.jpg"
-            alt=""
-          />
+          <p>Guantes Gold</p>
+          <img src="../imagenes/productos/guantes/guantes-gold.png" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
-          <p>Musculosa Naranja y Negro</p>
-          <img
-            src="/imagenes/productos/musculosas/musculosa-orange.jpg"
-            alt=""
-          />
+          <p>Guantes Grey</p>
+          <img src="../imagenes/productos/guantes/guantes-grey.png" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
 
         <div class="box">
-          <p>Musculosa Naranja y Blanca</p>
+          <p>Guantes Platinum</p>
           <img
-            src="/imagenes/productos/musculosas/musculosa-orange-white.jpg"
+            src="../imagenes/productos/guantes/guantes-platinum.png"
             alt=""
           />
           <button class="boton-comprar">Comprar</button>
