--- a/pages/musculosas.html
+++ b/pages/musculosas.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Warriors Boxing Gym - Remeras</title>
+    <title>Warriors Boxing Gym - Musculosas</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles\styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
     <header>
-      <img src="/imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <img src="../imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
       <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,20 +33,20 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#"
-              >Remeras <span class="sr-only">(Actual)</span></a
+              >Musculosas <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="/index.html">Home</a>
-            <a class="nav-item nav-link" href="../contacto.html">Contacto</a>
-            <a class="nav-item nav-link" href="../quienes-somos.html"
+            <a class="nav-item nav-link" href="../index.html">Home</a>
+            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="./quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="../ubicacion.html">Ubicación</a>
+            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
             <!-- dropdown -->
             <!-- <div class="nav-item dropdown"> -->
             <div class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="../productos.html"
+                href="./productos.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -55,22 +55,18 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../productos.html"
-                    >Productos</a
-                  >
+                  <a class="dropdown-item" href="./productos.html">Productos</a>
                 </li>
                 <li>
-                  <a class="nav-item nav-link active" href="#"
-                    >Remeras <span class="sr-only"></span
-                  ></a>
+                  <a class="dropdown-item" href="./remeras.html">Remeras</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./guantes.html">Guantes</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./musculosas.html"
-                    >Musculosas</a
-                  >
+                  <a class="nav-item nav-link active" href="#"
+                    >Musculosas <span class="sr-only"></span
+                  ></a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./vendas.html">Vendas</a>
@@ -97,24 +93,36 @@
     <section>
       <div class="boxes">
         <div class="box">
-          <p>Remera Blanca</p>
-          <img src="/imagenes/productos/remeras/remera-white.png" alt="" />
+          <p>Musculosa Blanca</p>
+          <img
+            src="../imagenes/productos/musculosas/musculosa-white.jpg"
+            alt=""
+          />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
-          <p>Remera Dorada</p>
-          <img src="/imagenes/productos/remeras/remera-dorada.jpg" alt="" />
+          <p>Musculosa Negra</p>
+          <img
+            src="../imagenes/productos/musculosas/musculosa-black.jpg"
+            alt=""
+          />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
-          <p>Remera Rosa</p>
-          <img src="/imagenes/productos/remeras/remera-rosa.jpg" alt="" />
+          <p>Musculosa Naranja y Negro</p>
+          <img
+            src="../imagenes/productos/musculosas/musculosa-orange.jpg"
+            alt=""
+          />
           <button class="boton-comprar">Comprar</button>
         </div>
 
         <div class="box">
-          <p>Remera Naranja</p>
-          <img src="/imagenes/productos/remeras/remera-naranja.jpg" alt="" />
+          <p>Musculosa Naranja y Blanca</p>
+          <img
+            src="../imagenes/productos/musculosas/musculosa-orange-white.jpg"
+            alt=""
+          />
           <button class="boton-comprar">Comprar</button>
         </div>
       </div>
