--- a/pages/vendas.html
+++ b/pages/vendas.html
@@ -10,11 +10,11 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
   </head>
   <body>
     <header>
-      <img src="/imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <img src="../imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
       <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,18 +35,18 @@
             <a class="nav-item nav-link active" href="#"
               >Vendas <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="/index.html">Home</a>
-            <a class="nav-item nav-link" href="../contacto.html">Contacto</a>
-            <a class="nav-item nav-link" href="../quienes-somos.html"
+            <a class="nav-item nav-link" href="../index.html">Home</a>
+            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="./quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="../ubicacion.html">Ubicación</a>
+            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
             <!-- dropdown -->
             <!-- <div class="nav-item dropdown"> -->
             <div class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="../productos.html"
+                href="./productos.html"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -55,9 +55,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../productos.html"
-                    >Productos</a
-                  >
+                  <a class="dropdown-item" href="./productos.html">Productos</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./remeras.html">Remeras</a>
@@ -98,23 +96,23 @@
       <div class="boxes">
         <div class="box">
           <p>Vendas Everlast</p>
-          <img src="/imagenes/productos/vendas/vendas everlast.jpg" alt="" />
+          <img src="../imagenes/productos/vendas/vendas everlast.jpg" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
           <p>Vendas Procer</p>
-          <img src="/imagenes/productos/vendas/vendas procer.png" alt="" />
+          <img src="../imagenes/productos/vendas/vendas procer.png" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
         <div class="box">
           <p>Vendas Venum</p>
-          <img src="/imagenes/productos/vendas/vendas venum.png" alt="" />
+          <img src="../imagenes/productos/vendas/vendas venum.png" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
 
         <div class="box">
           <p>Vendas Meister</p>
-          <img src="/imagenes/productos/vendas/vendas.png" alt="" />
+          <img src="../imagenes/productos/vendas/vendas.png" alt="" />
           <button class="boton-comprar">Comprar</button>
         </div>
       </div>
