arreglados los links

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -57,46 +57,28 @@
                   <a class="dropdown-item" href="productos.html">Productos</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/remeras.html"
-                    >Remeras</a
-                  >
+                  <a class="dropdown-item" href="remeras.html">Remeras</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/guantes.html"
-                    >Guantes</a
-                  >
+                  <a class="dropdown-item" href="guantes.html">Guantes</a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./cart-products/musculosas.html"
-                    >Musculosas</a
-                  >
+                  <a class="dropdown-item" href="musculosas.html">Musculosas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/vendas.html"
-                    >Vendas</a
-                  >
+                  <a class="dropdown-item" href="vendas.html">Vendas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/cabezales.html"
-                    >Cabezales</a
-                  >
+                  <a class="dropdown-item" href="cabezales.html">Cabezales</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/bucales.html"
-                    >Bucales</a
-                  >
+                  <a class="dropdown-item" href="bucales.html">Bucales</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/bolsas.html"
-                    >Bolsas</a
-                  >
+                  <a class="dropdown-item" href="bolsas.html">Bolsas</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./cart-products/kits.html"
-                    >Kits</a
-                  >
+                  <a class="dropdown-item" href="kits.html">Kits</a>
                 </li>
               </ul>
             </div>
