--- a/index.html
+++ b/index.html
@@ -64,60 +64,38 @@
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/remeras.html"
+                  <a class="dropdown-item" href="./pages/remeras.html"
                     >Remeras</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/guantes.html"
+                  <a class="dropdown-item" href="./pages/guantes.html"
                     >Guantes</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/musculosas.html"
+                  <a class="dropdown-item" href="./pages/musculosas.html"
                     >Musculosas</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/vendas.html"
-                    >Vendas</a
-                  >
+                  <a class="dropdown-item" href="./pages/vendas.html">Vendas</a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/cabezales.html"
+                  <a class="dropdown-item" href="./pages/cabezales.html"
                     >Cabezales</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/bucales.html"
+                  <a class="dropdown-item" href="./pages/bucales.html"
                     >Bucales</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/bolsas.html"
-                    >Bolsas</a
-                  >
+                  <a class="dropdown-item" href="./pages/bolsas.html">Bolsas</a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./pages/cart-products/kits.html"
-                    >Kits</a
-                  >
+                  <a class="dropdown-item" href="./pages/kits.html">Kits</a>
                 </li>
               </ul>
             </div>
