--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -88,19 +88,17 @@
     </header>
     <section>
       <div id="textomapa">
-        <p>
-          Podes encontrarnos en Google Maps
-          <a href="https://maps.app.goo.gl/YRHraV3UMSZsubePA" target="_blank"
-            >acá</a
-          >
-        </p>
-        <img
-          src="../imagenes/fotos_lugar/mapa.png"
-          class="imagenes-flex"
-          alt=""
-        />
+        <p>Podes encontrarnos en Google Maps</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.732812053205!2d-58.24231392564523!3d-34.737128664553765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32eff39be010b%3A0xde4a25ad8dcb3abd!2sSarmiento%201587%2C%20B1878%20Quilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1753583919579!5m2!1ses!2sar"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
-
       <!-- Este div es para las imagenes del lugar-->
       <div class="imagenes">
         <h2>Conocé nuestras instalaciones</h2>
