probar las animaciones

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
   </head>
   <body>
     <header>
-      <img src="./imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
-      <h1>Warriors Boxing Gym</h1>
+      <img
+        class="animate-back-in-left"
+        src="./imagenes/fotos_lugar/warriors-logo-nue.png"
+        border="0"
+      />
+      <!--<h1 id="titulo" class="animate__animated animate__backInRight"> </h1> -->
+      <h1 class="animate-back-in-right">Warriors Boxing Gym</h1>
+
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Menu</a>
