--- a/pages/cart.html
+++ b/pages/cart.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#"
-              >Cabezal <span class="sr-only">(Actual)</span></a
+              >Bolsas <span class="sr-only">(Actual)</span></a
             >
             <a class="nav-item nav-link" href="../index.html">Home</a>
             <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
@@ -72,15 +72,15 @@
                   <a class="dropdown-item" href="./vendas.html">Vendas</a>
                 </li>
                 <li>
-                  <a class="nav-item nav-link active" href="#"
-                    >Cabezales <span class="sr-only"></span
-                  ></a>
+                  <a class="dropdown-item" href="./cabezales.html">Cabezales</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./bucales.html">Bucales</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./bolsas.html">Bolsas</a>
+                  <a class="nav-item nav-link active" href="#"
+                    >Bolsas <span class="sr-only"></span
+                  ></a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./kits.html">Kits</a>
@@ -92,40 +92,7 @@
       </nav>
       <!-- FIN DEL NAV -->
     </header>
-    <section>
-      <div class="boxes">
-        <div class="box">
-          <p>Cabezal Everlast</p>
-          <img
-            src="../imagenes/productos/accesorios/cabezal-everlast.png"
-            alt=""
-          />
-          <button class="boton-comprar">Comprar</button>
-        </div>
-        <div class="box">
-          <p>Cabezal Cleto Reyes</p>
-          <img
-            src="../imagenes/productos/accesorios/cabezal-cleto.jpg"
-            alt=""
-          />
-          <button class="boton-comprar">Comprar</button>
-        </div>
-        <div class="box">
-          <p>Cabezal Corti</p>
-          <img
-            src="../imagenes/productos/accesorios/cabezal-corti-rojo-y-negro.jpg"
-            alt=""
-          />
-          <button class="boton-comprar">Comprar</button>
-        </div>
 
-        <div class="box">
-          <p>Cabezal Title</p>
-          <img src="../imagenes/productos/accesorios/cabezal.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
-        </div>
-      </div>
-    </section>
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
