--- a/pages/productos.html
+++ b/pages/productos.html
@@ -90,37 +90,61 @@
     <!-- Con esto hacemos flexbox para el responsive -->
     <section class="mainGrid">
       <div class="boxes">
+        <!-- REMERAS -->
         <div class="box">
           <p>Remeras</p>
-          <img src="../imagenes/productos/remeras/remera-naranja.jpg" alt="" />
+          <a href="./remeras.html"
+            ><img src="../imagenes/productos/remeras/remera-naranja.jpg" alt=""
+          /></a>
         </div>
+        <!-- MUSCULOSAS -->
         <div class="box">
           <p>Musculosas</p>
-          <img src="../imagenes/productos/musculosas/musculosas.png" alt="" />
+          <a href="./musculosas.html"
+            ><img src="../imagenes/productos/musculosas/musculosas.png" alt=""
+          /></a>
         </div>
+        <!-- GUANTES -->
         <div class="box">
           <p>Guantes</p>
-          <img src="../imagenes/productos/guantes/guantes.png" alt="" />
+          <a href="./guantes.html"
+            ><img src="../imagenes/productos/guantes/guantes.png" alt=""
+          /></a>
         </div>
+        <!-- VENDAS -->
         <div class="box">
           <p>Vendas</p>
-          <img src="../imagenes/productos/vendas/vendas.png" alt="" />
+          <a href="./vendas.html"
+            ><img src="../imagenes/productos/vendas/vendas.png" alt=""
+          /></a>
         </div>
+        <!-- Cabezales -->
         <div class="box">
           <p>Cabezales</p>
-          <img src="../imagenes/productos/accesorios/cabezal.jpg" alt="" />
+          <a href="./cabezales.html"
+            ><img src="../imagenes/productos/accesorios/cabezal.jpg" alt=""
+          /></a>
         </div>
+        <!-- BUCALES -->
         <div class="box">
           <p>Bucales</p>
-          <img src="../imagenes/productos/accesorios/bucal.jpg" alt="" />
+          <a href="./bucales.html"
+            ><img src="../imagenes/productos/accesorios/bucal.jpg" alt=""
+          /></a>
         </div>
+        <!-- BOLSAS -->
         <div class="box">
           <p>Bolsas</p>
-          <img src="../imagenes/productos/accesorios/bolsa.jpg" alt="" />
+          <a href="./bolsas.html"
+            ><img src="../imagenes/productos/accesorios/bolsa.jpg" alt=""
+          /></a>
         </div>
+        <!-- KITS -->
         <div class="box">
           <p>Kits</p>
-          <img src="../imagenes/productos/accesorios/kit-title.png" alt="" />
+          <a href="./kits.html"
+            ><img src="../imagenes/productos/accesorios/kit-title.png" alt=""
+          /></a>
         </div>
       </div>
     </section>
