arreglo de animaciones

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Warriors Boxing Gym</title>
   </head>
@@ -19,8 +20,8 @@
         src="./imagenes/fotos_lugar/warriors-logo-nue.png"
         border="0"
       />
-      <!--<h1 id="titulo" class="animate__animated animate__backInRight"> </h1> -->
       <h1 class="animate-back-in-right">Warriors Boxing Gym</h1>
+      <!--<h1 class="animate-back-in-right">Warriors Boxing Gym</h1> class="animate-back-in-left" -->
 
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
