--- a/pages/cart.html
+++ b/pages/cart.html
@@ -93,6 +93,15 @@
       <!-- FIN DEL NAV -->
     </header>
 
+    <div class="box">
+      <p class="animate-back-in-right">PROXIMAMENTE...</p>
+      <div class="spinner"></div>
+      <p class="animate-back-in-right">
+        Mientras tanto podés solicitar nuestros productos<br />
+        a través de nuestra página de contacto o Instagram!
+      </p>
+    </div>
+
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
