agregado cart con spinner proximamente

--- a/pages/bolsas.html
+++ b/pages/bolsas.html
@@ -100,12 +100,16 @@
             src="../imagenes/productos/accesorios/bolsa-everlast.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Cobra Bag</p>
           <img src="../imagenes/productos/accesorios/bolsa-cobra.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Waterbag</p>
@@ -113,12 +117,16 @@
             src="../imagenes/productos/accesorios/bolsa-waterbag.png"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Perita</p>
           <img src="../imagenes/productos/accesorios/bolsa-perita.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
