--- a/pages/bucales.html
+++ b/pages/bucales.html
@@ -97,18 +97,24 @@
         <div class="box">
           <p>Bucal UFC</p>
           <img src="../imagenes/productos/accesorios/bucal-ufc.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Bucal Venum</p>
           <img src="../imagenes/productos/accesorios/bucal-venum.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
           <p>Bucal Title</p>
           <img src="../imagenes/productos/accesorios/bucal.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
