--- a/pages/cabezales.html
+++ b/pages/cabezales.html
@@ -100,7 +100,9 @@
             src="../imagenes/productos/accesorios/cabezal-everlast.png"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Cabezal Cleto Reyes</p>
@@ -108,7 +110,9 @@
             src="../imagenes/productos/accesorios/cabezal-cleto.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Cabezal Corti</p>
@@ -116,13 +120,17 @@
             src="../imagenes/productos/accesorios/cabezal-corti-rojo-y-negro.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
           <p>Cabezal Title</p>
           <img src="../imagenes/productos/accesorios/cabezal.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
