--- a/pages/cart.html
+++ b/pages/cart.html
@@ -96,12 +96,25 @@
     <div class="box">
       <p class="animate-back-in-right">PROXIMAMENTE...</p>
       <div class="spinner"></div>
-      <p class="animate-back-in-right">
-        Mientras tanto podés solicitar nuestros productos<br />
-        a través de nuestra página de contacto o Instagram!
-      </p>
     </div>
 
+    <div class="imagenes">
+      <p class="animate-back-in-right">
+        Mientras tanto podés solicitar nuestros productos<br />
+        a través de nuestra página de <a href="./contacto.html"> Contacto</a> o
+        <br />
+        <img
+          class="icono"
+          src="../imagenes/productos/accesorios/instagram.png"
+          alt=""
+        />
+        <a
+          href="https://www.instagram.com/warriors_tbgym?igsh=MTRhbHc4MTJoeWJtZQ=="
+          target="_blank"
+          >Instagram</a
+        >
+      </p>
+    </div>
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
