--- a/pages/guantes.html
+++ b/pages/guantes.html
@@ -100,17 +100,23 @@
             src="../imagenes/productos/guantes/guantes-bloodmoon.png"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Guantes Gold</p>
           <img src="../imagenes/productos/guantes/guantes-gold.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Guantes Grey</p>
           <img src="../imagenes/productos/guantes/guantes-grey.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
@@ -119,7 +125,9 @@
             src="../imagenes/productos/guantes/guantes-platinum.png"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
