--- a/pages/kits.html
+++ b/pages/kits.html
@@ -97,22 +97,30 @@
         <div class="box">
           <p>Kit Training</p>
           <img src="../imagenes/productos/accesorios/kit 1.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Kit Ready to Fight</p>
           <img src="../imagenes/productos/accesorios/kit 2.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Kit Everlast</p>
           <img src="../imagenes/productos/accesorios/kit everlast.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Kit Title</p>
           <img src="../imagenes/productos/accesorios/kit-title.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
