--- a/pages/musculosas.html
+++ b/pages/musculosas.html
@@ -98,7 +98,9 @@
             src="../imagenes/productos/musculosas/musculosa-white.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Musculosa Negra</p>
@@ -106,7 +108,9 @@
             src="../imagenes/productos/musculosas/musculosa-black.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Musculosa Naranja y Negro</p>
@@ -114,7 +118,9 @@
             src="../imagenes/productos/musculosas/musculosa-orange.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
@@ -123,7 +129,9 @@
             src="../imagenes/productos/musculosas/musculosa-orange-white.jpg"
             alt=""
           />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
