--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -85,15 +85,16 @@
         </div>
       </nav>
     </header>
+
     <div class="textos">
-      <p>
+      <p class="animate-back-in-left">
         Somos Warriors Boxing Gym un club de boxeo oriundo de Quilmes. <br />
         Enseñamos boxeo desde 2018 y ahora estamos por abrir una nueva sucursal
         muy cerca de la original. <br />
         Contamos con 3 profesores profesionales en boxeo:
       </p>
       <br />
-      <ol>
+      <ol class="animate-back-in-right">
         <li>Tomas Bruno</li>
         <li>Edgardo Bruno</li>
         <li>Micaela Bruno</li>
@@ -103,7 +104,7 @@
     <!-- Clase imagenes para poder alinear solo la imagen al centro-->
     <div class="imagenes">
       <img
-        src="../imagenes/fotos_lugar/warriors-logo.png"
+        src="../imagenes/fotos_lugar/logo-color-fondo.png"
         alt="warriors-logo"
       />
       <p>
@@ -111,6 +112,11 @@
         profesional. <br />
         <!-- El instagram lo abre en otra pestaña con target="_blank" -->
         Podes encontrarnos en nuestro
+        <img
+          class="icono"
+          src="../imagenes/productos/accesorios/instagram.png"
+          alt=""
+        />
         <a
           href="https://www.instagram.com/warriors_tbgym?igsh=MTRhbHc4MTJoeWJtZQ=="
           target="_blank"
