--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -97,23 +97,31 @@
         <div class="box">
           <p>Remera Blanca</p>
           <img src="../imagenes/productos/remeras/remera-white.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Remera Dorada</p>
           <img src="../imagenes/productos/remeras/remera-dorada.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Remera Rosa</p>
           <img src="../imagenes/productos/remeras/remera-rosa.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
           <p>Remera Naranja</p>
           <img src="../imagenes/productos/remeras/remera-naranja.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
