--- a/pages/vendas.html
+++ b/pages/vendas.html
@@ -97,23 +97,31 @@
         <div class="box">
           <p>Vendas Everlast</p>
           <img src="../imagenes/productos/vendas/vendas everlast.jpg" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Vendas Procer</p>
           <img src="../imagenes/productos/vendas/vendas procer.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
         <div class="box">
           <p>Vendas Venum</p>
           <img src="../imagenes/productos/vendas/vendas venum.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
 
         <div class="box">
           <p>Vendas Meister</p>
           <img src="../imagenes/productos/vendas/vendas.png" alt="" />
-          <button class="boton-comprar">Comprar</button>
+          <a href="./cart.html">
+            <button class="boton-comprar">Comprar</button>
+          </a>
         </div>
       </div>
     </section>
