arreglado el cart

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#"
-              >Bolsas <span class="sr-only">(Actual)</span></a
+              >Carrito <span class="sr-only">(Actual)</span></a
             >
             <a class="nav-item nav-link" href="../index.html">Home</a>
             <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
@@ -78,9 +78,7 @@
                   <a class="dropdown-item" href="./bucales.html">Bucales</a>
                 </li>
                 <li>
-                  <a class="nav-item nav-link active" href="#"
-                    >Bolsas <span class="sr-only"></span
-                  ></a>
+                  <a class="dropdown-item" href="./bolsas.html">Bucales</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="./kits.html">Kits</a>
